Junits added for FC guardrails
Signed-off-by: Harsh Kothari <techarsh@amazon.com>